[PR115013][LRA]: Modify register starvation recognition

My recent patch to recognize reg starvation resulted in few GCC test
failures.  The following patch fixes this by using more accurate
starvation calculation and ignoring small reg classes.

gcc/ChangeLog:

	PR rtl-optimization/115013
	* lra-constraints.cc (process_alt_operands): Update all_used_nregs
	only for winreg.  Ignore reg starvation for small reg classes.